# embench

./: .env.example  .gitignore  README.md  pyproject.toml  setup.ps1  setup.sh
embench/: __init__.py  cli.py  utils.py
embench/datasets/: __init__.py  base.py
embench/ingest/: __init__.py  chunk.py  common.py  extract.py  pdf.py  queries.py
embench/models/: __init__.py  api_models.py  base.py  cache.py  dummy.py  openai.py  sentence_transformer.py
embench/reporting/: __init__.py  results.py
embench/runners/: benchmark.py
embench/tasks/: __init__.py  base.py  classification.py  clustering.py  retrieval.py
examples/: embench_walkthrough.ipynb  quickstart.py
sample_data/: labeled.csv  retrieval.json
tests/: test_smoke.py
