[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "embench"
version = "0.1.0"
description = "Benchmark embedding models on your own data — choose the right model for your dataset, not the leaderboard's."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Mahnoor Shahid", email = "mahnoor_shahid_shakir@outlook.com" }]
keywords = ["embeddings", "benchmark", "retrieval", "rag", "mteb", "nlp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Base install: the core pipeline plus every *lightweight* API backend, so
# `pip install embench` runs OpenAI/Cohere/Voyage/Google/Hugging Face out of
# the box. The one heavyweight backend (sentence-transformers, which pulls in
# PyTorch) is opt-in via the `local` / `all` extras below.
dependencies = [
    "numpy>=1.21",
    "scikit-learn>=1.0",
    "pandas>=1.3",
    "python-dotenv>=1.0",
    "openai>=1.0",
    "cohere>=5.0",
    "voyageai>=0.2",
    "google-genai>=1.0",
    "huggingface-hub>=0.20",
]

[project.optional-dependencies]
# local models via sentence-transformers (pulls in PyTorch — large)
local = ["sentence-transformers>=2.2"]
# everything, including the heavy local backend
all = ["sentence-transformers>=2.2"]
dev = ["pytest>=7.0"]

[project.scripts]
embench = "embench.cli:main"

[project.urls]
Homepage = "https://github.com/mahnoor-shahid/embench"
Repository = "https://github.com/mahnoor-shahid/embench"
Issues = "https://github.com/mahnoor-shahid/embench/issues"

[tool.hatch.build.targets.wheel]
packages = ["embench"]
